--- a/Project/Project/client/public/index.html
+++ b/Project/Project/client/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/normalize.css">
     <title>Project</title>
   </head>
   <body>
